SALG-1200: Style header level. Fix small text contrast

--- a/web/themes/sportsfaciliteter/css/style.css
+++ b/web/themes/sportsfaciliteter/css/style.css
@@ -9,8 +9,8 @@
   --color-primary-darker: hsl(224, 68%, 30%);
   --color-success: hsl(130, 85%, 25%);
   --color-success-darker: hsl(130, 85%, 15%);
-  --color-gray-700: #444;
-  --color-gray-900: #222;
+  --color-gray-700: hsl(0, 0%, 27%);
+  --color-gray-900: hsl(0, 0%, 13%);
   --text-color-primary: var(--color-gray-900);
 
   /* Transitions */
@@ -31,6 +31,12 @@ body {
 
 .main-container {
   max-width: 1200px;
+}
+
+/* Typograpy */
+
+.title-h4 {
+  font-size: 18px;
 }
 
 
@@ -130,6 +136,10 @@ a:hover {
 .geolocation-map-control input.form-autocomplete,
 .geolocation-map-control input {
   box-sizing: border-box;
+}
+
+.help-block {
+  color: var(--color-gray-700, #333)
 }
 
 /* View table */
